fixed treasure size on mobile

--- a/src/css/loading.css
+++ b/src/css/loading.css
@@ -155,7 +155,7 @@
     }
 
     .treasure{
-        width: 30px;
+        width: 50px;
         height: auto;
         bottom: 260px;
         left: 50px;
